; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/phonet/extr_sysctl.c_phonet_get_local_port_range.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/phonet/extr_sysctl.c_phonet_get_local_port_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@local_port_range_lock = common dso_local global i32 0, align 4
@local_port_range = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @phonet_get_local_port_range(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  br label %6

6:                                                ; preds = %24, %2
  %7 = call i32 @read_seqbegin(i32* @local_port_range_lock)
  store i32 %7, i32* %5, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %6
  %11 = load i32*, i32** @local_port_range, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %3, align 8
  store i32 %13, i32* %14, align 4
  br label %15

15:                                               ; preds = %10, %6
  %16 = load i32*, i32** %4, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i32*, i32** @local_port_range, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %4, align 8
  store i32 %21, i32* %22, align 4
  br label %23

23:                                               ; preds = %18, %15
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %5, align 4
  %26 = call i64 @read_seqretry(i32* @local_port_range_lock, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %6, label %28

28:                                               ; preds = %24
  ret void
}

declare dso_local i32 @read_seqbegin(i32*) #1

declare dso_local i64 @read_seqretry(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
